<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NameActivity">

    <EditText
        android:id="@+id/playerOneName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/player_one_name"
        android:imeOptions="actionNext"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/playerTwoName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/player_two_name"
        android:imeOptions="actionDone"
        android:inputType="textCapWords" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/begin"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="#CC1100"
            android:text="@string/begin"
            android:textColor="#000000"
            android:textSize="20sp" />

    </RelativeLayout>

</LinearLayout>