<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="?android:buttonBarButtonStyle"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".TwoPlayersActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/playerOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_margin="10dp"
            android:layout_toStartOf="@id/playerTwo"
            android:hint="@string/player_1"
            android:text=""
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/playerTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:hint="@string/player_2"
            android:text=""
            android:textColor="#000000"
            android:textSize="30sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sbPlayerOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_margin="10dp"
            android:layout_toStartOf="@id/sbPlayerTwo"
            android:hint="@string/zero"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            android:text=""
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/sbPlayerTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:hint="@string/zero"
            android:paddingEnd="35dp"
            android:paddingStart="35dp"
            android:text=""
            android:textColor="#000000"
            android:textSize="30sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_00"
            style="?android:buttonBarButtonStyle"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:background="#0AC92B"
            android:textColor="#000000"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button_01"
            style="?android:buttonBarButtonStyle"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:background="#0AC92B"
            android:textColor="#000000"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button_02"
            style="?android:buttonBarButtonStyle"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:background="#0AC92B"
            android:textColor="#000000"
            android:textSize="60sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_10"
            style="?android:buttonBarButtonStyle"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:background="#0AC92B"
            android:textColor="#000000"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button_11"
            style="?android:buttonBarButtonStyle"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:background="#0AC92B"
            android:textColor="#000000"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button_12"
            style="?android:buttonBarButtonStyle"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:background="#0AC92B"
            android:textColor="#000000"
            android:textSize="60sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_20"
            style="?android:buttonBarButtonStyle"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:background="#0AC92B"
            android:textColor="#000000"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button_21"
            style="?android:buttonBarButtonStyle"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:background="#0AC92B"
            android:textColor="#000000"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button_22"
            style="?android:buttonBarButtonStyle"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:background="#0AC92B"
            android:textColor="#000000"
            android:textSize="60sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <Button
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="#CC1100"
            android:text="@string/reset"
            android:textColor="#000000"
            android:textSize="20sp" />

    </RelativeLayout>

</LinearLayout>